# processing/app.py
@@ -25,7 +25,7 @@ with open(log_conf_file, 'r') as f:
     log_config = yaml.safe_load(f.read())
     logging.config.dictConfig(log_config)
 
-logger = logging.getLogger('basicLogger')
+logger = logging.getLogger('basimembership_validateogger')
 
 logger.info("App Conf File: %s" % app_conf_file) 
 logger.info("Log Conf File: %s" % log_conf_file)
@@ -56,35 +56,35 @@ def populate_stats():
     except:
         "If the file doesn’t yet exist, use default values for the stats"
         with open(app_config['datastore']['filename'],'w') as file:
-            #! Is this work without quoute "num_bs_sales"
-            # file.write(json.dumps({"num_bs_sales": 0, "max_bs_readings": 0,"num_cl_sales": 0,"max_cl_readings": 0,"last_updated": "2016-08-29T09:12:33Z"}))
+            #! Is this work without quoute "num_personal_info_sales"
+            # file.write(json.dumps({"num_personal_info_sales": 0, "max_personal_info_readings": 0,"num_membership_validate_sales": 0,"max_membership_validate_readings": 0,"last_updated": "2016-08-29T09:12:33Z"}))
             file.write(json.dumps(
-                {"num_bs_readings": 0, "max_bs_readings": 0, "num_cl_readings": 0, "max_cl_readings": 0,
+                {"num_personal_info_readings": 0, "max_personal_info_readings": 0, "num_membership_validate_readings": 0, "max_membership_validate_readings": 0,
                     "last_updated": "2016-08-29T09:12:33Z"}))
 
     "Query the two GET endpoints from your Data Store Service to get all new events from the last datetime you requested them (from your statistics) to the current datetime"
     # 'last_updated' is written into json in the calculation below
-    # bs_request = requests.get(app_config['get_instore_sales']['url']+stats['last_updated'])
-    # cl_request = requests.get(app_config['get_online_sales']['url']+stats['last_updated'])
+    # personal_info_request = requests.get(app_config['get_instore_sales']['url']+stats['last_updated'])
+    # membership_validate_request = requests.get(app_config['get_online_sales']['url']+stats['last_updated'])
     last_updated = stats['last_updated']
-    bs_request = requests.get(app_config['eventstore']['url'] + "/readings/blood-sugar?start_timestamp=" + last_updated + "&end_timestamp=" + current_timestamp)
-    cl_request = requests.get(app_config['eventstore']['url'] + "/readings/cortisol-level?start_timestamp=" + last_updated + "&end_timestamp=" + current_timestamp)
-    if  bs_request.status_code != 200:
+    personal_info_request = requests.get(app_config['eventstore']['url'] + "/readings/personal_information?start_timestamp=" + last_updated + "&end_timestamp=" + current_timestamp)
+    membership_validate_request = requests.get(app_config['eventstore']['url'] + "/readings/start_end_date?start_timestamp=" + last_updated + "&end_timestamp=" + current_timestamp)
+    if  personal_info_request.status_code != 200:
         logger.error("ERROR ON Receiving data for instore.")
     else:
         logger.info("Successfully received instore.")
-    if cl_request.status_code != 200:
+    if membership_validate_request.status_code != 200:
         logger.error("ERROR ON Receiving data for online.")
     else:
         logger.info("Successfully received online.")
     #Based on the new events from the Data Store Service
-    bs_data = json.loads(bs_request.content)
-    cl_data = json.loads(cl_request.content)
-    num_bs = len(bs_data) + stats["num_bs_readings"]
-    num_cl = len(cl_data) + stats["num_cl_readings"]
-    max_bs_readings = max(max([x['blood_sugar'] for x in bs_data], default=0), stats["max_bs_readings"])
-    max_cl_readings = max(max([x['cortisol_level'] for x in cl_data], default=0), stats["max_cl_readings"])
-    data_obj = {"num_bs_readings": num_bs, "max_bs_readings": max_bs_readings,"num_cl_readings": num_cl,"max_cl_readings": max_cl_readings,"last_updated":current_timestamp}
+    personal_info_data = json.loads(personal_info_request.content)
+    membership_validate_data = json.loads(membership_validate_request.content)
+    num_personal_info = len(personal_info_data) + stats["num_personal_info_readings"]
+    num_membership_validate = len(membership_validate_data) + stats["num_membership_validate_readings"]
+    max_personal_info_readings = max(max([x['age'] for x in personal_info_data], default=0), stats["max_personal_info_readings"])
+    max_membership_validate_readings = max(max([x['duration_months'] for x in membership_validate_data], default=0), stats["max_membership_validate_readings"])
+    data_obj = {"num_personal_info_readings": num_personal_info, "max_personal_info_readings": max_personal_info_readings,"num_membership_validate_readings": num_membership_validate,"max_membership_validate_readings": max_membership_validate_readings,"last_updated":current_timestamp}
     with open(app_config['datastore']['filename'],'w') as file:
         file.write(json.dumps(data_obj))
     logger.debug("Successfully saved the new stats: {}".format(data_obj))
