# storage/drop_tables_mysql.py
@@ -11,6 +11,6 @@ db_conn = mysql.connector.connect(host= app_config["datastore"]["hostname"],
                                     database= app_config["datastore"]["db"])
 
 db_cursor = db_conn.cursor()
-db_cursor.execute(''' DROP TABLE online_sales, instore_sales ''') 
+db_cursor.execute(''' DROP TABLE personal_information, membership_validity''') 
 db_conn.commit() 
 db_conn.close()
